@@ -30,6 +30,7 @@ MODx.grid.Grid = function(config) {
 			,enableRowBody: true
             ,autoFill: true
 			,showPreview: true
+            ,scrollOffset: 0
 		}
 	});
 	if (config.paging) {
@@ -46,6 +47,7 @@ MODx.grid.Grid = function(config) {
         Ext.applyIf(config,{
           view: new Ext.grid.GroupingView({ 
             forceFit: true 
+            ,scrollOffset: 0
             ,groupTextTpl: '{text} ({[values.rs.length]} {[values.rs.length > 1 ? "'
                 +(config.pluralText || _('records')) + '" : "'
                 +(config.singleText || _('record'))+'"]})' 
